--- a/files/句子长按_翻译/styles.css
+++ b/files/句子长按_翻译/styles.css
@@ -12,13 +12,23 @@
   position:absolute;
   z-index:0;
 }
-#u642_img {
+#u642_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
   height:449px;
+  background:inherit;
+  background-color:rgba(0, 102, 0, 0.858823529411765);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
 }
 #u642 {
   border-width:0px;
@@ -230,6 +240,7 @@
   top:18px;
   width:14px;
   height:29px;
+  color:#FFFFFF;
 }
 #u657 {
   border-width:0px;
@@ -258,7 +269,7 @@
   font-weight:400;
   font-style:normal;
   font-size:20px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u658 {
   border-width:0px;
@@ -271,7 +282,7 @@
   font-weight:400;
   font-style:normal;
   font-size:20px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u659 {
   border-width:0px;
@@ -320,6 +331,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u662 {
   border-width:0px;
@@ -328,6 +340,7 @@
   top:74px;
   width:131px;
   height:33px;
+  color:#FFFFFF;
 }
 #u663 {
   border-width:0px;
@@ -409,6 +422,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u668 {
   border-width:0px;
@@ -417,6 +431,7 @@
   top:124px;
   width:135px;
   height:33px;
+  color:#FFFFFF;
 }
 #u669 {
   border-width:0px;
@@ -498,6 +513,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u674 {
   border-width:0px;
@@ -506,6 +522,7 @@
   top:176px;
   width:166px;
   height:50px;
+  color:#FFFFFF;
 }
 #u675 {
   border-width:0px;
