--- a/files/某一语言类型单词_中文/styles.css
+++ b/files/某一语言类型单词_中文/styles.css
@@ -12,13 +12,23 @@
   position:absolute;
   z-index:0;
 }
-#u408_img {
+#u408_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
   height:449px;
+  background:inherit;
+  background-color:rgba(0, 102, 0, 0.858823529411765);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
 }
 #u408 {
   border-width:0px;
@@ -60,6 +70,7 @@
   top:18px;
   width:14px;
   height:29px;
+  color:#FFFFFF;
 }
 #u412 {
   border-width:0px;
@@ -88,7 +99,7 @@
   font-weight:400;
   font-style:normal;
   font-size:20px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u413 {
   border-width:0px;
@@ -101,7 +112,7 @@
   font-weight:400;
   font-style:normal;
   font-size:20px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u414 {
   border-width:0px;
@@ -173,6 +184,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:16px;
+  color:#FFFFFF;
 }
 #u418 {
   border-width:0px;
@@ -182,6 +194,7 @@
   width:33px;
   height:19px;
   font-size:16px;
+  color:#FFFFFF;
 }
 #u419 {
   border-width:0px;
@@ -205,6 +218,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u420 {
   border-width:0px;
@@ -213,6 +227,7 @@
   top:123px;
   width:29px;
   height:17px;
+  color:#FFFFFF;
 }
 #u421 {
   border-width:0px;
@@ -452,6 +467,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u439 {
   border-width:0px;
@@ -460,6 +476,7 @@
   top:158px;
   width:29px;
   height:17px;
+  color:#FFFFFF;
 }
 #u440 {
   border-width:0px;
@@ -541,6 +558,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u445 {
   border-width:0px;
@@ -549,6 +567,7 @@
   top:191px;
   width:29px;
   height:17px;
+  color:#FFFFFF;
 }
 #u446 {
   border-width:0px;
@@ -630,6 +649,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u451 {
   border-width:0px;
@@ -638,6 +658,7 @@
   top:227px;
   width:29px;
   height:17px;
+  color:#FFFFFF;
 }
 #u452 {
   border-width:0px;
@@ -719,6 +740,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u457 {
   border-width:0px;
@@ -727,6 +749,7 @@
   top:254px;
   width:29px;
   height:17px;
+  color:#FFFFFF;
 }
 #u458 {
   border-width:0px;
@@ -808,6 +831,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u463 {
   border-width:0px;
@@ -816,6 +840,7 @@
   top:285px;
   width:29px;
   height:17px;
+  color:#FFFFFF;
 }
 #u464 {
   border-width:0px;
