--- a/files/点击其中一篇诗歌/styles.css
+++ b/files/点击其中一篇诗歌/styles.css
@@ -12,13 +12,23 @@
   position:absolute;
   z-index:0;
 }
-#u732_img {
+#u732_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
   height:449px;
+  background:inherit;
+  background-color:rgba(0, 102, 0, 0.858823529411765);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
 }
 #u732 {
   border-width:0px;
@@ -60,6 +70,7 @@
   top:18px;
   width:14px;
   height:29px;
+  color:#FFFFFF;
 }
 #u736 {
   border-width:0px;
@@ -88,7 +99,7 @@
   font-weight:400;
   font-style:normal;
   font-size:20px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u737 {
   border-width:0px;
@@ -101,7 +112,7 @@
   font-weight:400;
   font-style:normal;
   font-size:20px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u738 {
   border-width:0px;
@@ -151,6 +162,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:18px;
+  color:#FFFFFF;
 }
 #u741 {
   border-width:0px;
@@ -160,6 +172,7 @@
   width:37px;
   height:22px;
   font-size:18px;
+  color:#FFFFFF;
 }
 #u742 {
   border-width:0px;
@@ -183,7 +196,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u743 {
   border-width:0px;
@@ -192,7 +205,7 @@
   top:73px;
   width:29px;
   height:17px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u744 {
   border-width:0px;
@@ -217,6 +230,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:18px;
+  color:#FFFFFF;
   line-height:28px;
 }
 #u745 {
@@ -227,6 +241,7 @@
   width:145px;
   height:224px;
   font-size:18px;
+  color:#FFFFFF;
   line-height:28px;
 }
 #u746 {
@@ -251,6 +266,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u747 {
   border-width:0px;
@@ -259,6 +275,7 @@
   top:334px;
   width:267px;
   height:117px;
+  color:#FFFFFF;
 }
 #u748 {
   border-width:0px;
@@ -283,6 +300,7 @@
   top:73px;
   width:19px;
   height:16px;
+  color:#FFFFFF;
 }
 #u750 {
   border-width:0px;
