--- a/files/记录/styles.css
+++ b/files/记录/styles.css
@@ -12,13 +12,23 @@
   position:absolute;
   z-index:0;
 }
-#u196_img {
+#u196_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
   height:449px;
+  background:inherit;
+  background-color:rgba(0, 102, 0, 0.858823529411765);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
 }
 #u196 {
   border-width:0px;
