--- a/files/识存学app框架图/styles.css
+++ b/files/识存学app框架图/styles.css
@@ -12,13 +12,24 @@
   position:absolute;
   z-index:0;
 }
-#u18_img {
+#u18_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:100px;
   height:60px;
+  background:inherit;
+  background-color:rgba(0, 102, 0, 0.858823529411765);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:10px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#FFFFFF;
 }
 #u18 {
   border-width:0px;
@@ -27,6 +38,7 @@
   top:23px;
   width:100px;
   height:60px;
+  color:#FFFFFF;
 }
 #u19 {
   border-width:0px;
