--- a/files/诗歌/styles.css
+++ b/files/诗歌/styles.css
@@ -12,13 +12,24 @@
   position:absolute;
   z-index:0;
 }
-#u686_img {
+#u686_div {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
   height:449px;
+  background:inherit;
+  background-color:rgba(0, 102, 0, 0.858823529411765);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  color:#FFFFFF;
 }
 #u686 {
   border-width:0px;
@@ -27,6 +38,7 @@
   top:11px;
   width:300px;
   height:449px;
+  color:#FFFFFF;
 }
 #u687 {
   border-width:0px;
@@ -60,6 +72,7 @@
   top:18px;
   width:14px;
   height:29px;
+  color:#FFFFFF;
 }
 #u690 {
   border-width:0px;
@@ -88,7 +101,7 @@
   font-weight:400;
   font-style:normal;
   font-size:20px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u691 {
   border-width:0px;
@@ -101,7 +114,7 @@
   font-weight:400;
   font-style:normal;
   font-size:20px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u692 {
   border-width:0px;
@@ -412,6 +425,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u713 {
   border-width:0px;
@@ -420,6 +434,7 @@
   top:121px;
   width:29px;
   height:17px;
+  color:#FFFFFF;
 }
 #u714 {
   border-width:0px;
@@ -444,7 +459,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:10px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u715 {
   border-width:0px;
@@ -454,7 +469,7 @@
   width:21px;
   height:11px;
   font-size:10px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u716 {
   border-width:0px;
@@ -486,6 +501,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u718 {
   border-width:0px;
@@ -494,6 +510,7 @@
   top:157px;
   width:57px;
   height:17px;
+  color:#FFFFFF;
 }
 #u719 {
   border-width:0px;
@@ -518,7 +535,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:10px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u720 {
   border-width:0px;
@@ -528,7 +545,7 @@
   width:21px;
   height:11px;
   font-size:10px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u721 {
   border-width:0px;
@@ -560,6 +577,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u723 {
   border-width:0px;
@@ -568,6 +586,7 @@
   top:195px;
   width:57px;
   height:17px;
+  color:#FFFFFF;
 }
 #u724 {
   border-width:0px;
@@ -592,7 +611,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:10px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u725 {
   border-width:0px;
@@ -602,7 +621,7 @@
   width:21px;
   height:11px;
   font-size:10px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u726 {
   border-width:0px;
@@ -634,6 +653,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  color:#FFFFFF;
 }
 #u728 {
   border-width:0px;
@@ -642,6 +662,7 @@
   top:228px;
   width:57px;
   height:17px;
+  color:#FFFFFF;
 }
 #u729 {
   border-width:0px;
@@ -666,7 +687,7 @@
   -webkit-box-shadow:none;
   box-shadow:none;
   font-size:10px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u730 {
   border-width:0px;
@@ -676,7 +697,7 @@
   width:21px;
   height:11px;
   font-size:10px;
-  color:#666666;
+  color:#FFFFFF;
 }
 #u731 {
   border-width:0px;
